# django-ext-js-examples

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
Frontend/: app.js  app.json  index.html  workspace.json
Frontend/app/: Application.js
Frontend/app/view/main/: List.js  Login.js  Main.js  MainController.js
api/: settings.py  urls.py  views.py
api/api/: settings.py
